--- a/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
+++ b/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
@@ -1,19 +1,17 @@
 ---
 title: Local State with NgRx & Apollo Angular
-description:
-  An approach to managing local state in Angular when working with GraphQL.
+description: An approach to managing local state in Angular when working with GraphQL.
 published: 2021-05-01
 repo: local-state-with-ngrx-and-apollo-angular
+cover: ./cover.webp
 ---
 
-Within this article, I want to provide a helpful solution in Angular for
-managing local state when working with GraphQL. This involves 2 technologies:
-NgRx ComponentStore & Apollo Angular.
+Within this article, I want to provide a helpful solution in Angular for managing local state when
+working with GraphQL. This involves 2 technologies: NgRx ComponentStore & Apollo Angular.
 
-> This article will cover topics that involve a basic understanding of
-> [GraphQL][graphql], [Apollo Angular][apolloangular], and [NgRx][ngrx]. If you
-> are unfamiliar with any of these technolgies, please read up on them before
-> going futher.
+> This article will cover topics that involve a basic understanding of [GraphQL][graphql], [Apollo
+> Angular][apolloangular], and [NgRx][ngrx]. If you are unfamiliar with any of these technolgies,
+> please read up on them before going futher.
 
 ## Setup
 
@@ -22,8 +20,8 @@ npm install @ngrx/component-store
 ng add apollo-angular
 ```
 
-After dependencies have been installed, let's build out our data model. For this
-example, we will be working with a collection of villagers.
+After dependencies have been installed, let's build out our data model. For this example, we will be
+working with a collection of villagers.
 
 ```ts title="src/app/villagers/villagers.ts"
 export interface IVillager {
@@ -36,8 +34,8 @@ export interface IVillager {
 export type Villagers = Array<IVillager>;
 ```
 
-Now that we have our data model in place, lets create a simple component and its
-module which will inherit our future local state of villagers.
+Now that we have our data model in place, lets create a simple component and its module which will
+inherit our future local state of villagers.
 
 ```ts title="src/app/villagers/villagers.component.ts"
 import { CommonModule } from '@angular/common';
@@ -62,14 +60,12 @@ export class VillagersModule {}
 
 ## Creating GraphQL Query
 
-With the groundwork layed out, we can now begin the fun stuff! Lets start by
-building a GraphQL Query to which we'll use to fetch our collection of
-villagers. This is where Apollo Angular comes in to play. Apollo Angular gives
-us the ability to construct a GraphQL Query in the form of an Angular Service.
-This can be done like so:
+With the groundwork layed out, we can now begin the fun stuff! Lets start by building a GraphQL
+Query to which we'll use to fetch our collection of villagers. This is where Apollo Angular comes in
+to play. Apollo Angular gives us the ability to construct a GraphQL Query in the form of an Angular
+Service. This can be done like so:
 
-> Apollo Angular provides [other ways][apolloangular-queries] of performing a
-> Query.
+> Apollo Angular provides [other ways][apolloangular-queries] of performing a Query.
 
 ```ts title="src/app/villagers/villagers.gql.ts"
 import { Injectable } from '@angular/core';
@@ -95,22 +91,19 @@ export class VillagersGQL extends Query<IVillagersResponse> {
 }
 ```
 
-Let's break down what we just did here. We started by creating our expected
-response data: `IVillagersResponse`. Next, we setup our actual Angular Service
-which is simply extending Apollo Angular's `Query` class. By passing
-IVillagersResponse in to the class as such, we now gain Type-Saftey around the
-Query from wherever we use it.
+Let's break down what we just did here. We started by creating our expected response data:
+`IVillagersResponse`. Next, we setup our actual Angular Service which is simply extending Apollo
+Angular's `Query` class. By passing IVillagersResponse in to the class as such, we now gain
+Type-Saftey around the Query from wherever we use it.
 
-As for the logic within the Service itself, _It's just GraphQL_. This is one of
-the core principles Apollo Angular sticks to. As you can see, the query is
-syntactically identical to what a tradional Query would look like. Pretty cool,
-huh?
+As for the logic within the Service itself, _It's just GraphQL_. This is one of the core principles
+Apollo Angular sticks to. As you can see, the query is syntactically identical to what a tradional
+Query would look like. Pretty cool, huh?
 
 ## Add NgRx ComponentStore
 
-Now that we have a way of retrieving our data and a component to display it,
-lets begin our local state management. For this we'll use NgRx ComponentStore.
-Let's start by creating our store.
+Now that we have a way of retrieving our data and a component to display it, lets begin our local
+state management. For this we'll use NgRx ComponentStore. Let's start by creating our store.
 
 ```ts title="src/app/villagers/villagers.store.ts"
 import { Injectable } from '@angular/core';
@@ -129,8 +122,7 @@ export class VillagersStore extends ComponentStore[IVillagersState] {
 }
 ```
 
-With our basic Store now in place, let's add the logic to interact with our
-Query we just wrote.
+With our basic Store now in place, let's add the logic to interact with our Query we just wrote.
 
 ```ts title="src/app/villagers/villagers.store.ts"
 ...
@@ -169,12 +161,11 @@ export class VillagersStore extends ComponentStore<IVillagersState> {
 }
 ```
 
-Within our effect, we make use of Apollo Angular's fetch() method via
-`this.query.fetch()`. This will return a single Observable emmisson and hook in
-to the effect's pipeline with ease. On a successful response, we'll use the
-`this.addMany(villagers)` updater to immutably update our villagers state.
-Finally, we have a selector: `villagers$` which we'll use to async bind to our
-UI. Now let's jump back to our component and hook this all up.
+Within our effect, we make use of Apollo Angular's fetch() method via `this.query.fetch()`. This
+will return a single Observable emmisson and hook in to the effect's pipeline with ease. On a
+successful response, we'll use the `this.addMany(villagers)` updater to immutably update our
+villagers state. Finally, we have a selector: `villagers$` which we'll use to async bind to our UI.
+Now let's jump back to our component and hook this all up.
 
 ```ts title="src/app/villagers/villagers.component.ts"
 ...
@@ -201,23 +192,20 @@ export class VillagersComponent implements OnInit {
 ...
 ```
 
-Within our Component's initialization, we are now calling
-`this.store.fetchAll()` which is our Store's effect which in turn calls our
-`VillagersGQL` Query. With that effect, our local state should then be updated
-and will now contain a collection of villagers. We can then async bind our
+Within our Component's initialization, we are now calling `this.store.fetchAll()` which is our
+Store's effect which in turn calls our `VillagersGQL` Query. With that effect, our local state
+should then be updated and will now contain a collection of villagers. We can then async bind our
 Store's `villagers$` to the DOM.
 
 ## Creating GraphQL Mutation
 
-Ok, so we've come along way since we've first started; however, there's still
-one scenario I'd like to cover which is GraphQL Mutations. We are able to
-perform a simple read operation on our data but what about writes? To do so, let
-build another Angular Service but instead of implementing the Query class, we'll
-implement the Mutation class. For this example, we will create a Mutation for
-updating a villager's name:
+Ok, so we've come along way since we've first started; however, there's still one scenario I'd like
+to cover which is GraphQL Mutations. We are able to perform a simple read operation on our data but
+what about writes? To do so, let build another Angular Service but instead of implementing the Query
+class, we'll implement the Mutation class. For this example, we will create a Mutation for updating
+a villager's name:
 
-> Apollo Angular provides [other ways][apolloangular-mutations] of performing a
-> Mutation.
+> Apollo Angular provides [other ways][apolloangular-mutations] of performing a Mutation.
 
 ```ts title="src/app/villagers/villager-edit-name.gql.ts"
 import { Injectable } from '@angular/core';
@@ -249,9 +237,9 @@ export class VillagerEditNameGQL extends Mutation<
 }
 ```
 
-Just like our Query class, a Mutation can enforce Type-Safety as well.
-`IVillagerEditNameResponse` for the response and `IVillagerEditNameVariables`
-for the variables. Also like the Query class logic, _It's just GraphQL_.
+Just like our Query class, a Mutation can enforce Type-Safety as well. `IVillagerEditNameResponse`
+for the response and `IVillagerEditNameVariables` for the variables. Also like the Query class
+logic, _It's just GraphQL_.
 
 ## Update NgRx ComponentStore
 
@@ -302,13 +290,11 @@ export class VillagersStore extends ComponentStore<
 ```
 
 Just like we did for VillagersGQL, we utilize a ComponentStore effect to invoke
-`this.editNameGQL.mutate(update)` which returns an Observable and can be hooked
-in to the pipeline. On successful response, we then call our
-`this.updateOne(res?.data?.updateVillager)` which updates our single villager
-record.
+`this.editNameGQL.mutate(update)` which returns an Observable and can be hooked in to the pipeline.
+On successful response, we then call our `this.updateOne(res?.data?.updateVillager)` which updates
+our single villager record.
 
-Finally, lets update our component to call our effect and update the local
-state:
+Finally, lets update our component to call our effect and update the local state:
 
 ```ts title="src/app/villagers/villagers.component.ts"
 ...
@@ -341,11 +327,10 @@ export class VillagersComponent implements OnInit {
 
 ## Remarks
 
-Apollo Angular maintains the integrity of GraphQL syntax which allows us to
-quickly pinpoint what a particular Service's Query or Mutation is doing (ex:
-`VillagersGQL`). NgRx ComponentStore offers an intuitive api with minimal setup
-required for local state management. It also caters to the reactive approach
-which blends nicely with our Queries and Mutations.
+Apollo Angular maintains the integrity of GraphQL syntax which allows us to quickly pinpoint what a
+particular Service's Query or Mutation is doing (ex: `VillagersGQL`). NgRx ComponentStore offers an
+intuitive api with minimal setup required for local state management. It also caters to the reactive
+approach which blends nicely with our Queries and Mutations.
 
 [graphql]: https://graphql.org/
 [apolloangular]: https://apollo-angular.com/docs/
