--- a/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
@@ -1,28 +1,26 @@
 ---
 title: Summarize Blog Posts with TypeScript and OpenAI's GPT
 description:
-  Implement basic web scraping and leverage OpenAI's GPT to summarize blog posts
-  via TypeScript.
+  Implement basic web scraping and leverage OpenAI's GPT to summarize blog posts via TypeScript.
 published: 2023-05-27
 repo: summarize-blog-posts-with-typescript-and-openais-gpt
+cover: ./cover.webp
 ---
 
-Blog posts are a key component in learning new technologies accross the web.
-With [OpenAI's GPT][openai-gpt], we can take this a step further by summarizing
-blog posts into a few sentences. Allowing quicker consumption while retaining
-key concepts.
+Blog posts are a key component in learning new technologies accross the web. With [OpenAI's
+GPT][openai-gpt], we can take this a step further by summarizing blog posts into a few sentences.
+Allowing quicker consumption while retaining key concepts.
 
-In this article, we will learn how to _scrape_ blog post content and _summarize_
-it using OpenAI's GPT via TypeScript.
+In this article, we will learn how to _scrape_ blog post content and _summarize_ it using OpenAI's
+GPT via TypeScript.
 
 ## Setup
 
-Before getting started, please ensure you have an OpenAI account. If not, you
-can signup on their website [here][openai-signup]. Once signed up, take note of
-your **API Key** as we'll need it later.
+Before getting started, please ensure you have an OpenAI account. If not, you can signup on their
+website [here][openai-signup]. Once signed up, take note of your **API Key** as we'll need it later.
 
-> This project will be using [Node.js][nodejs-download] 18.x. You can check your
-> Node.js version by running `node -v` within the terminal.
+> This project will be using [Node.js][nodejs-download] 18.x. You can check your Node.js version by
+> running `node -v` within the terminal.
 
 Let's begin by initializing our project and installing dependencies:
 
@@ -35,18 +33,17 @@ npm init -y && npm pkg set type=module
 npm i openai gpt-3-encoder cheerio user-agents dotenv typescript @types/node @types/user-agents
 ```
 
-Now that we have our project setup, let's create an `.env` file and place our
-secret OpenAI API Key in there.
+Now that we have our project setup, let's create an `.env` file and place our secret OpenAI API Key
+in there.
 
 ```bash title=".env"
 OPENAI_API_KEY='xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 ```
 
-Next, create a `tsconfig.json` file at the root of our project. This will allow
-us to leverage TypeScript within our project.
+Next, create a `tsconfig.json` file at the root of our project. This will allow us to leverage
+TypeScript within our project.
 
-> You can read about each of these options in more detail
-> [here][tsconfig-options].
+> You can read about each of these options in more detail [here][tsconfig-options].
 
 ```json title="tsconfig.json"
 {
@@ -67,8 +64,8 @@ us to leverage TypeScript within our project.
 }
 ```
 
-Lastly, create an `index.ts` file at the root of our project. Within this file,
-we can load our `.env` file and initialize the OpenAI API client.
+Lastly, create an `index.ts` file at the root of our project. Within this file, we can load our
+`.env` file and initialize the OpenAI API client.
 
 ```ts title="index.ts"
 import dotenv from 'dotenv';
@@ -82,13 +79,11 @@ const openai = new OpenAIApi(configuration);
 
 ## Web Scraping Content
 
-In order to summarize a blog post, we must first capture its contents. Start by
-using the [Fetch API][fetch-api] to get all HTML content from the blog post's
-webpage.
+In order to summarize a blog post, we must first capture its contents. Start by using the [Fetch
+API][fetch-api] to get all HTML content from the blog post's webpage.
 
-We must also pass a `User-Agent` header to the request. Certain websites will
-block requests that do not have this. We can generate one via the
-[user-agents][user-agents] library.
+We must also pass a `User-Agent` header to the request. Certain websites will block requests that do
+not have this. We can generate one via the [user-agents][user-agents] library.
 
 ```ts title="index.ts" {1-9}
 import dotenv from 'dotenv';
@@ -105,21 +100,18 @@ const url = 'https://openai.com/blog/introducing-chatgpt-and-whisper-apis';
 const html = await fetch(url, { headers }).then((res) => res.text());
 ```
 
-Using [Cheerio][cheerio], the blog post content must be extracted from the the
-HTML. This is essential as we only want to summarize the blog post content and
-not the entire page.
+Using [Cheerio][cheerio], the blog post content must be extracted from the the HTML. This is
+essential as we only want to summarize the blog post content and not the entire page.
 
-> Web scraping can be tricky as each website is built different. You may need to
-> adjust the selectors below to fit your needs.
+> Web scraping can be tricky as each website is built different. You may need to adjust the
+> selectors below to fit your needs.
 
-Also, OpenAI's GPT has a max number of [tokens][openai-tokens] that can be
-passed into it. This means we must truncate our content to fit within this
-limit. Thankfully, we can leverage [gpt-3-encoder][gpt-3-encoder] to do all the
-heavy lifting.
+Also, OpenAI's GPT has a max number of [tokens][openai-tokens] that can be passed into it. This
+means we must truncate our content to fit within this limit. Thankfully, we can leverage
+[gpt-3-encoder][gpt-3-encoder] to do all the heavy lifting.
 
-> For this example, we will be capturing the first 8000 tokens. The max token
-> count will vary based on the GPT model your using. I recommend using
-> [GPT-4][gpt4-model] as it has a much higher limit.
+> For this example, we will be capturing the first 8000 tokens. The max token count will vary based
+> on the GPT model your using. I recommend using [GPT-4][gpt4-model] as it has a much higher limit.
 
 ```ts title="index.ts" {2,4-14}
 import { load } from 'cheerio';
@@ -145,8 +137,8 @@ const safeContent = decode(encode(content.text()).slice(0, 8000));
 
 ## Summarizing Content
 
-Finally, we can pass our content to OpenAI's GPT and receive a summary of the
-blog post. Keep in mind, the request may take a few seconds to complete.
+Finally, we can pass our content to OpenAI's GPT and receive a summary of the blog post. Keep in
+mind, the request may take a few seconds to complete.
 
 ```ts title="index.ts" {1-20}
 import { load } from 'cheerio';
@@ -171,9 +163,7 @@ const safeContent = decode(encode(content.text()).slice(0, 8000));
 
 const chatCompletion = await openai.createChatCompletion({
   model: 'gpt-4', // or gpt-3.5-turbo
-  messages: [
-    { role: 'user', content: `Summarize in 1 paragraph: ${safeContent}` },
-  ],
+  messages: [{ role: 'user', content: `Summarize in 1 paragraph: ${safeContent}` }],
 });
 
 const summary = chatCompletion.data.choices[0].message?.content;
@@ -198,20 +188,18 @@ Here's an example of what the summary may look like:
 
 ## Remarks
 
-In very few lines of code, we were able to pull all content from a blog post and
-present a detailed summary of that content. As mentioned earlier, this allows
-quick consumption while retaining key concepts.
+In very few lines of code, we were able to pull all content from a blog post and present a detailed
+summary of that content. As mentioned earlier, this allows quick consumption while retaining key
+concepts.
 
-You can see this in action on my personal project [feedjoy][feedjoy]. Under each
-blog post exists a summary of its content.
+You can see this in action on my personal project [feedjoy][feedjoy]. Under each blog post exists a
+summary of its content.
 
 [openai-gpt]: https://openai.com/product/gpt-4
 [openai-signup]: https://platform.openai.com/signup
-[openai-tokens]:
-  https://help.openai.com/en/articles/4936856-what-are-tokens-and-how-to-count-them
+[openai-tokens]: https://help.openai.com/en/articles/4936856-what-are-tokens-and-how-to-count-them
 [nodejs-download]: https://nodejs.org/en/download
-[tsconfig-options]:
-  https://www.typescriptlang.org/docs/handbook/tsconfig-json.html
+[tsconfig-options]: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html
 [fetch-api]: https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API
 [cheerio]: https://cheerio.js.org/docs/intro
 [user-agents]: https://github.com/intoli/user-agents
