✨ Blog post topics

--- a/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables/index.mdx
+++ b/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables/index.mdx
@@ -3,6 +3,7 @@ title: Astro Shiki Syntax Highlighting with CSS Variables
 description:
   Customize an Astro project's Shiki syntax highlighting using a list of available CSS Variables.
 published: 2023-01-09
+topics: [Astro, CSS]
 repo: astro-shiki-css-variables
 cover: ./cover.webp
 ---
