--- a/src/content/posts/developing-browser-extensions-with-nextjs/index.mdx
+++ b/src/content/posts/developing-browser-extensions-with-nextjs/index.mdx
@@ -4,6 +4,7 @@ description:
   Learn how to bundle a Next.js application within a browser extension. Compatible with
   Chromium-based browsers and Firefox.
 published: 2022-04-19
+topics: [Next.js]
 repo: demo-nextjs-browser-extension
 cover: ./cover.webp
 ---
