--- a/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
+++ b/src/content/posts/local-state-with-ngrx-and-apollo-angular/index.mdx
@@ -2,6 +2,7 @@
 title: Local State with NgRx & Apollo Angular
 description: An approach to managing local state in Angular when working with GraphQL.
 published: 2021-05-01
+topics: [Angular, NgRx]
 repo: local-state-with-ngrx-and-apollo-angular
 cover: ./cover.webp
 ---
