--- a/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-openais-gpt/index.mdx
@@ -3,6 +3,7 @@ title: Summarize Blog Posts with TypeScript and OpenAI's GPT
 description:
   Implement basic web scraping and leverage OpenAI's GPT to summarize blog posts via TypeScript.
 published: 2023-05-27
+topics: [AI]
 repo: summarize-blog-posts-with-typescript-and-openais-gpt
 cover: ./cover.webp
 ---
