--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints/index.mdx
@@ -4,6 +4,7 @@ description:
   Solve bloated Tailwind CSS by implementing a fluid responsive design system via the power of CSS
   Clamp!
 published: 2022-09-17
+topics: [Tailwind CSS, CSS]
 repo: tailwindcss-fluid-responsive-design
 cover: ./cover.webp
 ---
