🚚 Shorten blog post title

--- a/src/content/posts/summarize-blog-posts-with-typescript-and-gpt/index.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-gpt/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Summarize Blog Posts with TypeScript and OpenAI's GPT
+title: Summarize Blog Posts with TypeScript and GPT
 description:
   Implement basic web scraping and leverage OpenAI's GPT to summarize blog posts via TypeScript.
 published: 2023-05-27
