✨ Move out covers into assest directory (plan is to just iterate over these six as only the latest 3 actually show the cover image).

--- a/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables.mdx
+++ b/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables.mdx
@@ -5,7 +5,7 @@ description:
 published: 2023-01-09
 topics: [Astro, CSS]
 repo: astro-shiki-css-variables
-cover: ./cover.webp
+cover: ../../assets/covers/1.webp
 ---
 
 By default, Astro uses [Shiki][shiki] for syntax highlighting markdown code blocks. Astro comes with
