--- a/src/content/posts/local-state-with-ngrx-and-apollo-angular.mdx
+++ b/src/content/posts/local-state-with-ngrx-and-apollo-angular.mdx
@@ -4,7 +4,7 @@ description: An approach to managing local state in Angular when working with Gr
 published: 2021-05-01
 topics: [Angular, NgRx]
 repo: local-state-with-ngrx-and-apollo-angular
-cover: ./cover.webp
+cover: ../../assets/covers/4.webp
 ---
 
 Within this article, I want to provide a helpful solution in Angular for managing local state when
