--- a/src/content/posts/summarize-blog-posts-with-typescript-and-gpt.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-gpt.mdx
@@ -5,7 +5,7 @@ description:
 published: 2023-05-27
 topics: [AI]
 repo: summarize-blog-posts-with-typescript-and-openais-gpt
-cover: ./cover.webp
+cover: ../../assets/covers/5.webp
 ---
 
 Blog posts are a key component in learning new technologies accross the web. With [OpenAI's
