--- a/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
+++ b/src/content/posts/tailwindcss-responsive-design-without-breakpoints.mdx
@@ -6,7 +6,7 @@ description:
 published: 2022-09-17
 topics: [Tailwind CSS, CSS]
 repo: tailwindcss-fluid-responsive-design
-cover: ./cover.webp
+cover: ../../assets/covers/6.webp
 ---
 
 Let's begin by looking at a common responsive design pattern in Tailwind CSS:
