--- a/src/content/posts/developing-browser-extensions-with-nextjs.mdx
+++ b/src/content/posts/developing-browser-extensions-with-nextjs.mdx
@@ -6,7 +6,7 @@ description:
 published: 2022-04-19
 topics: [Next.js]
 repo: demo-nextjs-browser-extension
-cover: ./cover.webp
+cover: ../../assets/covers/2.webp
 ---
 
 Although modern browsers offer a plethora of tooling to help assist web development and general
