⬆️ Upgrade to latest

--- a/src/content/posts/summarize-blog-posts-with-typescript-and-gpt.mdx
+++ b/src/content/posts/summarize-blog-posts-with-typescript-and-gpt.mdx
@@ -172,7 +172,7 @@ const summary = chatCompletion.data.choices[0].message?.content;
 
 Here's an example of what the summary may look like:
 
-```txt
+```plaintext
 ---
   "OpenAI now offers developers access to ChatGPT and Whisper models through its
   API, enabling the integration of cutting-edge language and speech-to-text
