--- a/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables.mdx
+++ b/src/content/posts/astro-shiki-syntax-highlighting-with-css-variables.mdx
@@ -1,15 +1,13 @@
 ---
 title: Astro Shiki Syntax Highlighting with CSS Variables
-description:
-  Customize an Astro project's Shiki syntax highlighting using a list of available CSS Variables.
+description: Customize an Astro project's Shiki syntax highlighting using a list of available CSS Variables.
 published: 2023-01-09
 topics: [Astro, CSS]
 repo: astro-shiki-css-variables
-cover: ../../assets/covers/1.webp
 ---
 
-By default, Astro uses [Shiki][shiki] for syntax highlighting markdown code blocks. Astro comes with
-an array of Shiki themes by default. However, let's learn how to make our own using _CSS Variables_.
+By default, Astro uses [Shiki][shiki] for syntax highlighting markdown code blocks. Astro comes with an array of Shiki
+themes by default. However, let's learn how to make our own using _CSS Variables_.
 
 ## Configuring Astro
 
@@ -28,8 +26,8 @@ export default defineConfig({
 
 ## Adding CSS Variables
 
-Within Astro's [source code][astro-remark-shiki], there's a _remark-shiki integration_ that defines
-a set of CSS Variables. Taking note of these variables, we can now override them with our own:
+Within Astro's [source code][astro-remark-shiki], there's a _remark-shiki integration_ that defines a set of CSS
+Variables. Taking note of these variables, we can now override them with our own:
 
 ```astro title="Layout.astro"
 <style is:global>
@@ -52,6 +50,5 @@ a set of CSS Variables. Taking note of these variables, we can now override them
 And that's it! All code block syntax highlighting will now use our CSS Variables.
 
 [shiki]: https://shiki.matsu.io/
-[astro-remark-shiki]:
-  https://github.com/withastro/astro/blob/main/packages/integrations/mdx/src/remark-shiki.ts
+[astro-remark-shiki]: https://github.com/withastro/astro/blob/main/packages/integrations/mdx/src/remark-shiki.ts
 [astro-mdx]: https://docs.astro.build/en/guides/integrations-guide/mdx/
